@@ -1,11 +1,12 @@
-package nl.dancingbear.visplugin.piechartplugin;
+package nl.cwi.sen1.visplugin.barchartplugin;
 
-import java.awt.Font;
+import java.awt.Color;
 
 import javax.swing.JLabel;
 import javax.swing.JPanel;
 
 import nl.cwi.sen1.relationstores.Factory;
+import nl.cwi.sen1.relationstores.types.Integer;
 import nl.cwi.sen1.relationstores.types.RElem;
 import nl.cwi.sen1.relationstores.types.RElemElements;
 import nl.cwi.sen1.relationstores.types.RTuple;
@@ -16,29 +17,31 @@ import nl.cwi.sen1.visplugin.VisualizationPluginWindow;
 import org.jfree.chart.ChartFactory;
 import org.jfree.chart.ChartPanel;
 import org.jfree.chart.JFreeChart;
-import org.jfree.chart.plot.PiePlot;
-import org.jfree.data.general.DefaultPieDataset;
+import org.jfree.chart.axis.CategoryAxis;
+import org.jfree.chart.axis.CategoryLabelPositions;
+import org.jfree.chart.axis.NumberAxis;
+import org.jfree.chart.plot.CategoryPlot;
+import org.jfree.chart.plot.PlotOrientation;
+import org.jfree.chart.renderer.category.CategoryItemRenderer;
+import org.jfree.data.category.CategoryDataset;
+import org.jfree.data.category.DefaultCategoryDataset;
 
 /**
- * PieChart Plugin VisualisationWindow. Shows a pie chart.
- * 
- * @author A. Belgraver
- * @author R. van Remortel
- * @author Aldert Boerhoop (reviewer)
- * @author Anton Gerdessen (reviewer)
+ * BarChart Plugin VisualisationWindow. Shows a bar chart.
+ * Original code : PieChart plugin ( A. Belgraver, R. van Remortel )
+ * @author Srinivasan Tharmarajah
  */
-public class PieChartVisualizationWindow extends VisualizationPluginWindow {
+public class BarChartVisualizationWindow extends VisualizationPluginWindow {
 
     /**
-     * Render the RTuple in a Pie Chart.
+     * Render the RTuple in a Bar Chart.
      * 
      * @param fact
      *            RTuple with the information
-     * @return JPanel holding the pie chart
+     * @return JPanel holding the bar chart
      * @author A. Belgraver
      * @author R. van Remortel
-     * @author Aldert Boerhoop (reviewer)
-     * @author Anton Gerdessen (reviewer)
+     * @author Srinivasan Tharmarjah
      * @date 07-3-2007
      */
     public JPanel render(RTuple fact) {
@@ -52,7 +55,7 @@ public class PieChartVisualizationWindow extends VisualizationPluginWindow {
 
         // Create and return the piechart.
         String name = getRTupleName(fact);
-        DefaultPieDataset dataset = convertRTupleToDataset(fact);
+        CategoryDataset dataset = convertRTupleToDataset(fact);
         JFreeChart chart = createPieChart(name, dataset);
 
         return new ChartPanel(chart,true,false,true,true,true);
@@ -62,10 +65,8 @@ public class PieChartVisualizationWindow extends VisualizationPluginWindow {
      * Set a new Factory object, for testing purposes.
      * 
      * @param factory
-     *            Factory to use
+     * Factory to use
      * @author A. Belgraver
-     * @author Aldert Boerhoop (reviewer)
-     * @author Anton Gerdessen (reviewer)
      * @date 07-3-2007
      */
     public void setFactory(Factory factory) {
@@ -80,11 +81,11 @@ public class PieChartVisualizationWindow extends VisualizationPluginWindow {
      * @return True if it itype is supported
      * @author Aldert Boerhoop
      * @author Anton Gerdessen
-     * 
-     * @date 07-3-2007
+     * @author Srinivasan Tharmarajah
+     * @date 12-03-2007
      */
     public boolean isTypeSupported(RTuple fact) {
-        boolean match = (isRelStrInt(fact) || isRelIntStr(fact) || isRelInt(fact));
+        boolean match = (isRelIntStr(fact) || isRelStrInt(fact) || isRelIntInt(fact) );
 
         return match;
     }
@@ -97,49 +98,7 @@ public class PieChartVisualizationWindow extends VisualizationPluginWindow {
      * @return True if it is the correct str,int type
      * @author A. Belgraver
      * @author R. van Remortel
-     * @author Aldert Boerhoop (reviewer)
-     * @author Anton Gerdessen (reviewer)
-     * @date 20-2-2007
-     * @todo Needs better implementation needs to be resolved reflection, dynamic 
-     * dispatch... in a the base or utility class for all plugins, remark by Anton G.     * 
-     */
-    private boolean isRelStrInt(RTuple fact) {
-        RType rType = m_factory.RTypeFromString("relation([str,int])");
-        boolean match = rType.equals(fact.getRtype());
-        
-        return match;
-    }
-
-    /**
-     * Check to see if the RTuple is indeed a int relation.
-     * 
-     * @param fact
-     *            RTuple to test
-     * @return True if it is the correct str,int type
-     * @author A. Belgraver
-     * @author R. van Remortel
-     * @author Aldert Boerhoop (reviewer)
-     * @author Anton Gerdessen (reviewer)
-     * @date 20-2-2007
-     * @todo Needs better implementation needs to be resolved reflection, dynamic 
-     * dispatch... in a the base or utility class for all plugins, remark by Anton G. 
-     */
-    private boolean isRelInt(RTuple fact) {
-        RType rType = m_factory.RTypeFromString("relation([int])");
-        boolean match = rType.equals(fact.getRtype());
-
-        return match;
-    }
-    
-    /**
-       /**
-     * Check to see if the RTuple is indeed a str,int relation.
-     * 
-     * @param fact
-     *            RTuple to test
-     * @return True if it is the correct str,int type
-     * @author A. Belgraver
-     * @author R. van Remortel
+     * @author Srinivasan Tharmarajah
      * @author Aldert Boerhoop (reviewer)
      * @author Anton Gerdessen (reviewer)
      * @date 20-2-2007
@@ -148,6 +107,28 @@ public class PieChartVisualizationWindow extends VisualizationPluginWindow {
      */
     private boolean isRelIntStr(RTuple fact) {
         RType rType = m_factory.RTypeFromString("relation([int,str])");
+        boolean match = rType.equals(fact.getRtype());
+        
+        return match;
+    }
+
+    /**
+     * Check to see if the RTuple is indeed a str,int relation.
+     * 
+     * @param fact
+     *            RTuple to test
+     * @return True if it is the correct str,int type
+     * @author A. Belgraver
+     * @author R. van Remortel
+     * @author Srinivasan Tharmarajah
+     * @author Aldert Boerhoop (reviewer)
+     * @author Anton Gerdessen (reviewer)
+     * @date 20-2-2007
+     * @todo Needs better implementation needs to be resolved reflection, dynamic 
+     * dispatch... in a the base or utility class for all plugins, remark by Anton G.     * 
+     */
+    private boolean isRelStrInt(RTuple fact) {
+        RType rType = m_factory.RTypeFromString("relation([str,int])");
         boolean match = rType.equals(fact.getRtype());
         
         return match;
@@ -173,86 +154,120 @@ public class PieChartVisualizationWindow extends VisualizationPluginWindow {
     }
 
     /**
-     * Create the pie chart.
+     * Create the bar chart.
      * 
-     * @param name
+     * @param title
      *            Name to display on screen
      * @param dataset
      *            Dataset to show
      * @return a JFreeChart chart
-     * @author A. Belgraver
-     * @author R. van Remortel
-     * @author Aldert Boerhoop (reviewer)
-     * @author Anton Gerdessen (reviewer)
-     * @date 07-3-2007
+     * @author Srinivasan Tharmarajah
+     * @date 12-03-2007
      */
-    private JFreeChart createPieChart(String name, DefaultPieDataset dataset) {
-        // Initialise the chart.
-        JFreeChart chart = ChartFactory.createPieChart(name, // chart title
-                dataset, // data
-                true, // include legend
-                true, // include tooltips
-                false); // incluse urls
+private JFreeChart createPieChart(String title, CategoryDataset dataset) {
+        
+    // create the chart...
+    final JFreeChart chart = ChartFactory.createBarChart(
+        title,                    // chart title
+        "Fact",                   // domain axis label
+        "Value",                  // range axis label
+        dataset,                  // data
+        PlotOrientation.VERTICAL, // orientation
+        false,                    // include legend
+        true,                     // tooltips?
+        false                     // URLs?
+    );
 
-        // Set the charts format options.
-        PiePlot plot = (PiePlot) chart.getPlot();
-        plot.setSectionOutlinesVisible(false);
-        plot.setLabelFont(new Font("SansSerif", Font.PLAIN, 12));
-        plot.setNoDataMessage("No data available");
-        plot.setCircular(false);
-        plot.setLabelGap(0.02);
+    // set the background color for the chart...
+    chart.setBackgroundPaint(Color.white);
 
-        return chart;
+    // get a reference to the plot for further customisation...
+    final CategoryPlot plot = chart.getCategoryPlot();
+    plot.setBackgroundPaint(Color.lightGray);
+    plot.setDomainGridlinePaint(Color.white);
+    plot.setRangeGridlinePaint(Color.white);
+    
+    // set the range axis to display integers only...
+    final NumberAxis rangeAxis = (NumberAxis) plot.getRangeAxis();
+    rangeAxis.setStandardTickUnits(NumberAxis.createIntegerTickUnits());
+    rangeAxis.setUpperMargin(0.15);
+    
+    // disable bar outlines...
+    final CategoryItemRenderer renderer = plot.getRenderer();
+    renderer.setSeriesItemLabelsVisible(0, Boolean.TRUE);
+    
+    final CategoryAxis domainAxis = plot.getDomainAxis();
+    domainAxis.setCategoryLabelPositions(CategoryLabelPositions.UP_45);
+    
+    return chart;
+        
     }
 
     /**
-     * Convert RTuple into a PieChart Dataset.
+     * Convert RTuple into a BarChart Dataset.
      * 
      * @param fact
      *            RTuple with the data
-     * @return PieChart dataset
+     * @return BarChart dataset
      * @author A. Belgraver
      * @author R. van Remortel
-     * @author Srinivasan Tharmarajah (Fix)
-     * @author Aldert Boerhoop (reviewer)
-     * @author Anton Gerdessen (reviewer)
-     * @date 07-3-2007
+     * @author Srinivasan Tharmarajah
+     * @date 12-03-2007
      */
-    public DefaultPieDataset convertRTupleToDataset(RTuple fact) {
+    public CategoryDataset convertRTupleToDataset(RTuple fact) {
         RElem set = fact.getValue();
         RElemElements elements = set.getElements();
         
-        DefaultPieDataset dataset = new DefaultPieDataset();
-        
-        String name = "";
-        nl.cwi.sen1.relationstores.types.Integer value;
-        int counter = 0;
+        final DefaultCategoryDataset dataset = new DefaultCategoryDataset();
         
         while (elements.hasTail()) {
             RElem headElement = elements.getHead();
             // Replace the current looping set with: ( set - head ).
             elements = elements.getTail();
 
-            // HeadElement itselfs is a tuple <str,int>, <int,str>.
+            // HeadElement itselfs is a tuple <str,int> or <int,str>.
             RElemElements tuple = headElement.getElements();
 
+            // Disassemble the tuple into its parts.
+            String name = "";
+            nl.cwi.sen1.relationstores.types.Integer value;
+            
             if (isRelStrInt(fact)) {
                 name = tuple.getRElemAt(0).getStrCon();
                 value = tuple.getRElemAt(1).getInteger();
-            }else if (isRelIntStr(fact)) {
+            }
+            else if (isRelIntStr(fact))  {
                 name = tuple.getRElemAt(1).getStrCon();
                 value = tuple.getRElemAt(0).getInteger();
-            }else if (isRelInt(fact)) {
-                value = tuple.getRElemAt(0).getInteger();
-                name = new String(++counter + ": " + value);
-            }else{
+            }
+            else if (isRelIntInt(fact)) {
+            	Integer i = tuple.getRElemAt(1).getInteger();
+            	if (i.isNatCon()) {
+            		name = "" + i.getNatCon();
+            	}
+            	else if (i.isNegative()) {
+            		name = "-" + i.getNatCon();
+            	}
+            	else if (i.isPositive()) {
+            		name = "+" + i.getNatCon();
+            	}
+            	value = tuple.getRElemAt(0).getInteger();
+            }
+            else{
             	throw new RuntimeException("Unknown relation type.");
             }
-                
+            
             // Store the current tuple in the dataset.
-            dataset.setValue(name, new Double(value.getNatCon()));
+            dataset.addValue(Double.valueOf(value.getNatCon()), name, name);
         }
         return dataset;
     }
 
- }
+	private boolean isRelIntInt(RTuple fact) {
+		 RType rType = m_factory.RTypeFromString("relation([int,int])");
+	        boolean match = rType.equals(fact.getRtype());
+	        
+	        return match;
+	}
+
+   }
